fixed layer menu scrolling in all browsers, switched animation for collapse

--- a/src/styles/layerMenu.scss
+++ b/src/styles/layerMenu.scss
@@ -1,8 +1,10 @@
 .layer-control {
+    position: relative;
     padding: 0.7rem 0rem;
     width: 100%;
     margin: 0px;
     border-bottom: 1px solid $color-medium-light;
+    display: block;
 }
 
 .layer-control:last-child {
@@ -244,50 +246,53 @@ button.position-control-button {
 
 #layerMenu {
     width: 370px;
-    max-height: 31px;
     position: absolute;
     top: 42px;
     right: 10px;
+    /*height: auto;*/
     z-index: 0;
     background: $color-light;
-    overflow: hidden;
-    /*overflow: visible;*/
+    overflow: visible;
     padding: 0px;
-    /*display: block;*/
-    @include flex();
-    @include flex-col();
-    -webkit-transition: max-height 0.2s ease-out 0s;
-    transition: max-height 0.2s ease-out 0s;
-    border-bottom-left-radius: 2px;
-    border-bottom-right-radius: 2px;
     @include light-shadow();
     .row {
         margin: 0px;
     }
 }
 
-#layerMenu.open {
-    /*max-height: 200px;*/
-    max-height: calc(75% - 96px);
-}
-
 #layerHeaderRow {
-    min-height: 31px;
+    z-index: 1;
+    position: absolute;
     padding: 0.3rem;
-    background: $color-primary;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 31px;
     color: $color-light;
+    background: $color-primary;
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 2px;
     @include light-shadow();
 }
 
 #layerMenuContent {
-    /*height: 100%;*/
+    z-index: 0;
+    position: absolute;
+    top: calc(-80vh - 130px);
+    left: 0px;
     display: block;
-    width: 100%;
+    height: initial;
     min-height: 0px;
-    @include flex();
-    @include flex-grow(1);
+    max-height: calc(80vh - 130px);
+    width: 100%;
+    overflow: hidden;
+    overflow-y: scroll;
+    background: $color-light;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+    -webkit-transition: top 0.3s ease-out 0s;
+    transition: top 0.3s ease-out 0s;
+    @include light-shadow();
     .toggle {
         padding-left: 1.3rem;
         padding-right: 0px;
@@ -304,4 +309,12 @@ button.position-control-button {
         position: relative;
         bottom: 4px;
     }
+}
+
+#layerMenu.open #layerHeaderRow {
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+#layerMenu.open #layerMenuContent {
+    top: 31px;
 }
